added github link

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
   <div class="d-flex  mx-auto justify-content-center mb-5">
     <p class="desc">I am a final year Computer Science student based in Odisha and I like to build and pawn stuffs.</p>
   </div>
-  <div class="d-flex justify-content-center">
-    <a href="#" class="btn btn-dark mr-2">Ping me</a>
-    <a href="#" class="btn btn-info mr-2">Projects</a>
-    <a href="#" class="btn btn-dark mr-2">Github</a>
+  <div class="d-flex justify-content-center flex-wrap">
+    <a href="contact.html" class="btn btn-dark mr-2">Ping me</a>
+    <a href="projects.html" class="btn btn-info mr-2">Projects</a>
+    <a href="https://github.com/SangharshSeth" class="btn btn-dark mr-2">Github</a>
     <a href="#" class="btn btn-light">Resume</a>
   </div>
   <br>
