--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
   <script src="script.js"></script>
-  <title>Hello, world!</title>
+  <title>Sangharsh</title>
   <!--Fonts
   font-family: 'Pacifico', cursive;
  font-family: 'Caveat', cursive;
