--- a/index.html
+++ b/index.html
@@ -31,32 +31,6 @@
 </head>
 
 <body>
-  <!-- Image and text -->
-  <!-- <nav class="navbar navbar-dark bg-dark">
-  <!-- Navbar content -->
-  <!-- <a class="navbar-brand mx-auto" href="#"><span>Sangharsh</span></a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-  </div>
-</nav> -->
-
-
-  <!--Banner-->
-  <!-- <div class="banner">
-      <p>Hi I am Sangharsh</p>
-    </div> -->
-  <!--My Info-->
-  <!-- <div class="d-flex .info justify-content-center">
-    <!-- <a href="github.com"><img src="logos/git.png" style="height: 30px;width: 30px;"></a>
-    <img src="logos/linkdln.png" style="height: 40px;width: 40px;">
-    <img src="logos/Codeforces.png" style="height: 30px;width: 30px;">
-    <img src="logos/10wmt-superJumbo-v4.jpg" style="height: 40px;width: 50px;"> -->
-
-  <!-- </div> -->
   <div class="d-flex justify-content-center">
     <p class="name">Sangharsh.CV</p>
   </div>
@@ -70,7 +44,7 @@
     <p class="cover2"><span class="sm">Web Developer</span> & Computer Scientist</p>
   </div>
   <div class="d-flex  mx-auto justify-content-center mb-5">
-    <p class="desc">I am a final year Computer Science student based in Odisha and I like to build and pawn stuffs.</p>
+    <p class="desc">Hey, Welcome to my profile. I am a backend engineer with over 3 years of experience with expertise in Distributed Systems, Architecting Secure Applications.</p>
   </div>
   <div class="d-flex justify-content-center flex-wrap">
     <a href="contact.html" class="btn btn-dark mr-2">Ping me</a>
@@ -101,54 +75,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- 
-  <div class="d-flex info align-items-center py-5 px-5 mb-3">
-    <div class="w-25 emg mr-3">
-      <img src=" logos/mee.jfif" class="img-fluid" style="border-radius: 50%;" /> -->
-
-  <!--        
-       <div class="d-flex flex-row">
-         <a href="#"><img src="logos/git.png" class="img-fluid" style="height: 20x; width: 20px;"></a>
-         <a href="#"><img src="logos/linkdln.png"class="img-fluid"style="height: 20x; width: 20px;"></a>
-         <a href="#"><img src="logos/Codeforces.png" class="img-fluid"style="height: 20x; width: 20px;"></a>
-       </div> -->
-  <!-- </div>
-    <div class="w-75 talk p-3 flex-column">
-      <p class="description">
-        Hi! I am Sangharsh seth.I am a final year undergraduate in Odisha.I
-        love to build stuffs and exploit stuffs.I want to utilize my skills to
-        build solutions to ease peoples life. -->
-  <!-- </p>
-      <a href="#" class="btn btn-info">Get in touch</a>
-      <a href="#" class="btn btn-success">My Projects</a>
-    </div>
-  </div>
-  <div class="green"></div> -->
-  <!--Projects div 1-->
-  <!-- <div class="d-flex flex-row">
-    <div class="d-flex flex-column"></div>
-    <div class="d-flex flex-column"></div>
-  </div> -->
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
